# psi-king

./: README.md
src/psiking-core/: README.md  pyproject.toml
src/psiking-core/psiking/core/base/: schema.py
src/psiking-core/psiking/core/embedder/: base.py
src/psiking-core/psiking/core/embedder/colpali/: bentocolpali.py  local_colpali_engine.py
src/psiking-core/psiking/core/embedder/fastembed/: __init__.py  local_late_interaction.py  local_sparse.py
src/psiking-core/psiking/core/embedder/flagembedding/: local_visualized_bge.py
src/psiking-core/psiking/core/embedder/openai/: text_embedder.py
src/psiking-core/psiking/core/embedder/pylate/: __init__.py  local_colbert.py
src/psiking-core/psiking/core/embedder/vllm/: base.py  online_jina_emb_v4.py
src/psiking-core/psiking/core/formatter/document/: base.py  simple.py
src/psiking-core/psiking/core/formatter/node/: default.py  schema.py  utils.py
src/psiking-core/psiking/core/processor/document/: base.py  text_merger.py
src/psiking-core/psiking/core/processor/node/: base.py
src/psiking-core/psiking/core/reader/: base.py  schema.py
src/psiking-core/psiking/core/reader/pdf/: docling_reader.py  pdf2image_reader.py
src/psiking-core/psiking/core/reader/pdf/docling/: reader.py  (+1 more)
src/psiking-core/psiking/core/splitter/multimodal/: base.py  it_langchain_text_splitters.py
src/psiking-core/psiking/core/splitter/text/: base.py  langchain_text_splitters.py
src/psiking-core/psiking/core/storage/docstore/: base.py  in_memory.py
src/psiking-core/psiking/core/storage/vectorstore/: base.py  schema.py  utils.py
(+172 files in other folders)
