[project]
name = "psiking-core"
version = "0.0.1"
description = ""
authors = [
    {name = "id4thomas",email = "id2thomas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "psiking"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
